cmake_minimum_required (VERSION 3.8)

set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR})  
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR})
set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY  ${CMAKE_BINARY_DIR})

include_directories(Source)
#include_directories(OpenUI)
include_directories(External/x64-windows/include)
include_directories(External/earcut.hpp/include)
include_directories(External/stb)
include_directories(External/x64-windows/include/pango-1.0)
include_directories(External/x64-windows/include/glib-2.0)
include_directories(External/x64-windows/include/harfbuzz)
include_directories(External/x64-windows/include/cairo)
if(CMAKE_BUILD_TYPE MATCHES Debug)
link_directories(External/x64-windows/debug/lib)
else()
link_directories(External/x64-windows/lib)
endif()

add_subdirectory(OpenUI)
add_subdirectory(External/Taitank)
add_subdirectory(Source)
add_subdirectory(Project)