project(OpenUI)

set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR})
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR})
set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR})
set(OPENUI_SOURCE_DIR ${CMAKE_CURRENT_SOURCE_DIR} CACHE STRING "OpenUI Source Path")
option(OPENUI_ENABLE_SAMPLE "Enable Sample Compile" OFF)

include_directories(${OPENUI_SOURCE_DIR})
add_subdirectory(OpenUI)
if(OPENUI_ENABLE_SAMPLE)
add_subdirectory(Sample)
endif()