cmake_minimum_required (VERSION 3.8)

add_definitions(-DOPENUI_SHARED_LIBRARY)

add_library (OpenUI SHARED
"UI.h"
"UIButton.h"
"UICheck.h"
"UICombo.h"
"UIContext.h"
"UIEdit.h"
"UIElement.h"
"UIEvent.h"
"UIFlow.h"
"UIGrid.h"
"UIHBox.h"
"UIInput.h"
"UILabel.h"
"UILine.h"
"UIMenu.h"
"UIPainter.h"
"UIProgress.h"
"UIRadio.h"
"UIRender.h"
"UIScroll.h"
"UIScrollBar.h"
"UISignal.h"
"UISlider.h"
"UISplit.h"
"UIVBox.h"
"Private/UIButton.cpp"
"Private/UICheck.cpp"
"Private/UICombo.cpp"
"Private/UIContext.cpp"
"Private/UIEdit.cpp"
"Private/UIElement.cpp"
"Private/UIFlow.cpp"
"Private/UIGrid.cpp"
"Private/UIHBox.cpp"
"Private/UIInput.cpp"
"Private/UILabel.cpp"
"Private/UILine.cpp"
"Private/UIMenu.cpp"
"Private/UIPieceTable.h"
"Private/UIProgress.cpp"
"Private/UIRadio.cpp"
"Private/UIScroll.cpp"
"Private/UIScrollBar.cpp"
"Private/UISlider.cpp"
"Private/UISplit.cpp"
"Private/UIVBox.cpp"
)

target_link_libraries(OpenUI yogacore)